feat: Get Messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="passe">Mot de passe :</string>
     <string name="remember">Se souvenir de moi :</string>
     <string name="choix_conversation">choix</string>
+    <string name="conversation">Conversation</string>
 </resources>
