feat: List messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="remember">Se souvenir de moi :</string>
     <string name="choix_conversation">choix</string>
     <string name="conversation">Conversation</string>
+    <string name="auteur">Auteur</string>
+    <string name="message">Message</string>
 </resources>
